[tool.poetry]
name = "travelplanner"
version = "0.1.0"
description = ""
authors = ["atellou <andresfe.t.u@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-vertexai = "^2.0.9"
langchain-core = "^0.3.24"
langgraph = "^0.2.59"
langchain = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
