[tool.poetry]
name = "travelplanner"
version = "0.1.0"
description = ""
authors = ["atellou <andresfe.t.u@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-vertexai = "^2.0.9"
langchain-core = "^0.3.24"
langgraph = "^0.2.59"
langchain = "^0.3.11"
langgraph-checkpoint-sqlite = "^2.0.1"
google-auth = "^2.37.0"
requests = "^2.32.3"
openai = "^1.57.4"
pygraphviz = "^1.14"
datasets = "^3.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
